--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,5 @@
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="color_request_work_calendar">#66BB6A</color>
+    <color name="home_page_gradient">#107761</color>
 </resources>
