--- a/app/src/main/res/layout/content_layout_edit_ory_name.xml
+++ b/app/src/main/res/layout/content_layout_edit_ory_name.xml
@@ -2,48 +2,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         style="@style/TextViewStyleContent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/name_electrical"
         android:textSize="14sp"
-        android:textStyle="bold"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"/>
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/et_name"
         style="@style/EditTestStyleElectricalEquipment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine|textVisiblePassword"
-        android:hint="@string/name"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:hint="@string/name"
+        android:inputType="textMultiLine|textVisiblePassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         style="@style/TextViewStyleContent"
-        android:text="@string/panel"
-        android:textStyle="bold"
-        android:textSize="14sp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:text="@string/panel"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/panel_mcp"
         style="@style/EditTestStyleElectricalEquipment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textMultiLine|textVisiblePassword"
-        android:hint="@string/panel"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:hint="@string/panel"
+        android:inputType="textMultiLine|textVisiblePassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
