--- a/app/src/main/res/layout/item_open_switchgear_vl.xml
+++ b/app/src/main/res/layout/item_open_switchgear_vl.xml
@@ -34,16 +34,33 @@
             android:textSize="11sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_name_equipment"
-            style="@style/TextViewStyleContent"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="12dp"
-            android:padding="6dp"
-            android:textSize="22sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20Percent"
+                android:layout_marginStart="8dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ory_vl_3"/>
+
+            <TextView
+                android:id="@+id/tv_name_equipment"
+                style="@style/TextViewStyleContent"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="12dp"
+                android:padding="6dp"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
