--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.SvetlogorskCHPP" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.SvetlogorskCHPP" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/text_recycle</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
