--- a/app/src/main/res/layout/dialog_open_switchgear_vl.xml
+++ b/app/src/main/res/layout/dialog_open_switchgear_vl.xml
@@ -90,7 +90,8 @@
                 style="@style/TextViewStyleContentHomePageSubsection"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="24dp"
                 android:text="@string/panel"
                 android:textColor="#567993" />
