--- a/app/src/main/res/drawable/background_item_open_switchgear_parameter_right.xml
+++ b/app/src/main/res/drawable/background_item_open_switchgear_parameter_right.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="45.0" android:endColor="#BD7115" android:startColor="@color/text_input_assembly" android:type="linear" />
+            <gradient android:angle="45.0" android:endColor="#A57C17" android:startColor="#D4BA95" android:type="linear" />
             <corners
                 android:topLeftRadius="180dp"
                 android:topRightRadius="0dp"
