--- a/app/src/main/res/drawable/background_item_open_switchgear_parameter_right.xml
+++ b/app/src/main/res/drawable/background_item_open_switchgear_parameter_right.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="45.0" android:endColor="#A57C17" android:startColor="#D4BA95" android:type="linear" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/text_recycle_smile" />
+            <gradient android:angle="45.0" android:endColor="#00A57C17" android:startColor="#00D4BA95" android:type="linear" />
             <corners
                 android:topLeftRadius="180dp"
                 android:topRightRadius="0dp"
